# icub-tutorials

./: .gitignore  README.md  doc.dox
.github/workflows/: trigger-documentation.yml
conf/: Doxyfile.txt
doc/: anyrobot_cartesian_interface.dox  cartesian_interface.dox  doc.dox  gaze_interface.dox  hello_icub.dox  iDyn_introduction.dox  iDyn_oneChain.dox  image_processing.dox  impedance_control_tutorial.dox  motor_control_tutorial.dox  periodic_thread.dox  python-imaging.dox  python-motor-control.dox  python-simworld-control.dox  rate_thread.dox  resource_finder_advanced.dox  resource_finder_basic.dox  thrift_tutorial.dox  thrift_tutorial_simple.dox  tutorial_module.dox  tutorial_module_documentation.dox
python/: python-motor-control.py  python_imaging.py  python_simworld_control.py
src/: CMakeLists.txt  findLocation.cpp  imageProc.cpp  lookAtLocation.cpp  relay.cpp  tutorial_arm.cpp  tutorial_arm_joint_impedance.cpp  tutorial_cartesian_interface.cpp  tutorial_gaze_interface.cpp  tutorial_rate_thread.cpp  tutorial_rf_advanced.cpp  tutorial_rf_basic.cpp
src/actionPrimitives/: CMakeLists.txt  tutorial_actionPrimitives.cpp
src/anyRobotCartesianInterface/: CMakeLists.txt
src/anyRobotCartesianInterface/app/: CMakeLists.txt
src/anyRobotCartesianInterface/app/conf/: kinematics.ini  server.ini  solver.ini
src/anyRobotCartesianInterface/app/scripts/: client.xml  robot_server_solver.xml
src/anyRobotCartesianInterface/src/: CMakeLists.txt
src/anyRobotCartesianInterface/src/client/: CMakeLists.txt  main.cpp
src/anyRobotCartesianInterface/src/fakeMotorDevice/: CMakeLists.txt
src/anyRobotCartesianInterface/src/fakeMotorDevice/include/: fakeMotorDevice.h
src/anyRobotCartesianInterface/src/fakeMotorDevice/include/private/: fakeMotorDeviceComponents.h
src/anyRobotCartesianInterface/src/fakeMotorDevice/src/: fakeMotorDevice.cpp  fakeMotorDeviceClient.cpp  fakeMotorDeviceServer.cpp
src/anyRobotCartesianInterface/src/fakeRobot/: CMakeLists.txt  main.cpp
src/anyRobotCartesianInterface/src/server/: CMakeLists.txt  main.cpp
src/anyRobotCartesianInterface/src/solver/: CMakeLists.txt  main.cpp
src/ctrlLib/: CMakeLists.txt
src/ctrlLib/onlinePTuner/: CMakeLists.txt  main.cpp
src/iDyn/: CMakeLists.txt
src/iDyn/multiLimbJacobian/: CMakeLists.txt  main.cpp
src/iDyn/multiLimbJacobian2/: CMakeLists.txt  main.cpp
src/iDyn/oneChainDynamics/: CMakeLists.txt  main.cpp
src/iDyn/oneChainWithSensor/: CMakeLists.txt  main.cpp
src/iDyn/wholeBody_FTsensor_estimate/: CMakeLists.txt
src/iKin/: CMakeLists.txt
src/iKin/fwInvKinematics/: CMakeLists.txt  main.cpp
src/iKin/genericChainController/: CMakeLists.txt  main.cpp
src/iKin/iCubLimbsFwKin/: CMakeLists.txt  main.cpp
src/iKin/onlineSolver/: CMakeLists.txt  main.cpp
src/imageProcessing/: CMakeLists.txt  findLocation.cpp  lookAtLocation.cpp
src/learningMachines/: CMakeLists.txt  lmlibdirect.cpp  lmlibindirect.cpp  lmlibportable.cpp
src/misc/: relay.cpp
src/module/: CMakeLists.txt  tutorial_module.cpp
src/motorControlAdvanced/: CMakeLists.txt  tutorial_cartesian_interface.cpp  tutorial_gaze_interface.cpp
src/motorControlBasic/: CMakeLists.txt  tutorial_arm.cpp
src/motorControlImpedance/: CMakeLists.txt  tutorial_arm_joint_impedance.cpp
src/optimization/: CMakeLists.txt
src/optimization/calibReference/: CMakeLists.txt  main.cpp
src/perceptiveModels/: CMakeLists.txt  tutorial_perceptiveModels.cpp
src/periodicThread/: CMakeLists.txt  tutorial_periodic_thread.cpp
src/rateThread/: CMakeLists.txt  tutorial_rate_thread.cpp
src/resourceFinder/: CMakeLists.txt  tutorial_rf_advanced.cpp  tutorial_rf_basic.cpp
src/rpcIdl/: CMakeLists.txt  IRpcServer_index.txt  IRpcServer_thrift.cmake  rpcIdl.xml
src/rpcIdl/include/: IRpcServer.h
src/rpcIdl/src/: IRpcServer.cpp
src/smoke-tests/: CMakeLists.txt  CTestConfig.cmake  icubVis.cpp  ipopt.cpp
src/white_tests/: CMakelists.txt  white_test_icubVis.cpp
