# Copyright: (C) 2012 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Ugo Pattacini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
project(iDyn_tutorials)
add_subdirectory(multiLimbJacobian)
add_subdirectory(multiLimbJacobian2)
add_subdirectory(oneChainDynamics)
add_subdirectory(oneChainWithSensor)
add_subdirectory(wholeBody_FTsensor_estimate)


