# Copyright: (C) 2010 RobotCub Consortium
# Authors: Arjan Gijsberts
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

SET(PROJECTNAME lmExample)
SET(LMLIB_DIRECT lmlibdirect)
SET(LMLIB_INDIRECT lmlibindirect)
SET(LMLIB_PORTABLE lmlibportable)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

ADD_EXECUTABLE(${LMLIB_DIRECT} ${LMLIB_DIRECT}.cpp)
ADD_EXECUTABLE(${LMLIB_INDIRECT} ${LMLIB_INDIRECT}.cpp)
ADD_EXECUTABLE(${LMLIB_PORTABLE} ${LMLIB_PORTABLE}.cpp)

TARGET_LINK_LIBRARIES(${LMLIB_DIRECT} learningMachine ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(${LMLIB_INDIRECT} learningMachine ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(${LMLIB_PORTABLE} learningMachine ${YARP_LIBRARIES})

INSTALL(TARGETS ${LMLIB_DIRECT} DESTINATION bin)
INSTALL(TARGETS ${LMLIB_INDIRECT} DESTINATION bin)
INSTALL(TARGETS ${LMLIB_PORTABLE} DESTINATION bin)

